check code distribution